--- a/index.html
+++ b/index.html
@@ -134,16 +134,26 @@
         .chat {
             display: flex;
             flex-direction: column;
+            /* Container for sticky elements */
+            overflow: hidden; 
             background: radial-gradient(1200px 400px at 10% -10%, #0b1431, transparent);
         }
+        
+        /* Floating Header */
         .chat-header {
             padding: 14px 16px;
             border-bottom: 1px solid #1f2937;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            background: var(--bg);
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
         .peer { display: flex; align-items: center; gap: 10px; }
+
+        /* Scrolling Body */
         .chat-body {
             flex: 1;
             overflow-y: auto;
@@ -183,12 +193,16 @@
             gap: 4px;
         }
 
-        /* Composer */
+        /* Floating Composer */
         .composer {
             display: flex;
             gap: 10px;
             padding: 12px;
             border-top: 1px solid #1f2937;
+            background: var(--bg);
+            position: sticky;
+            bottom: 0;
+            z-index: 10;
         }
         .composer input { flex: 1; }
         
