--- a/index.html
+++ b/index.html
@@ -134,26 +134,16 @@
         .chat {
             display: flex;
             flex-direction: column;
-            /* Container for sticky elements */
-            overflow: hidden; 
             background: radial-gradient(1200px 400px at 10% -10%, #0b1431, transparent);
         }
-        
-        /* Floating Header */
         .chat-header {
             padding: 14px 16px;
             border-bottom: 1px solid #1f2937;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background: var(--bg);
-            position: sticky;
-            top: 0;
-            z-index: 10;
         }
         .peer { display: flex; align-items: center; gap: 10px; }
-
-        /* Scrolling Body */
         .chat-body {
             flex: 1;
             overflow-y: auto;
@@ -193,16 +183,12 @@
             gap: 4px;
         }
 
-        /* Floating Composer */
+        /* Composer */
         .composer {
             display: flex;
             gap: 10px;
             padding: 12px;
             border-top: 1px solid #1f2937;
-            background: var(--bg);
-            position: sticky;
-            bottom: 0;
-            z-index: 10;
         }
         .composer input { flex: 1; }
         
@@ -250,6 +236,83 @@
                 padding: 6px 10px;
             }
         }
+        /* Chat Panel */
+.chat {
+    display: flex;
+    flex-direction: column;
+    background: radial-gradient(1200px 400px at 10% -10%, #0b1431, transparent);
+    position: relative;
+    height: 100%;
+}
+
+/* Chat Header stays on top (desktop + mobile) */
+.chat-header {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    background: var(--panel);
+    padding: 14px 16px;
+    border-bottom: 1px solid #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Chat Body scrolls between header and composer */
+.chat-body {
+    flex: 1;
+    overflow-y: auto;
+    padding: 18px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="160" height="160" viewBox="0 0 40 40"><g fill="%231f2937" fill-opacity=".45"><circle cx="1" cy="1" r="1"/><circle cx="21" cy="21" r="1"/><circle cx="1" cy="21" r="1"/><circle cx="21" cy="1" r="1"/></g></svg>');
+}
+
+/* Composer stays at bottom (desktop + mobile) */
+.composer {
+    position: sticky;
+    bottom: 0;
+    z-index: 10;
+    background: var(--panel);
+    display: flex;
+    gap: 10px;
+    padding: 12px;
+    border-top: 1px solid #1f2937;
+}
+
+/* Mobile Responsiveness */
+#menuBtn { display: none; }
+
+@media (max-width: 960px) {
+    .app { grid-template-columns: 1fr; }
+
+    .sidebar {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 20;
+        display: none;
+        transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+        display: flex;
+        transform: translateX(0);
+    }
+
+    .chat {
+        width: 100%;
+        height: 100%;
+    }
+
+    #menuBtn {
+        display: flex;
+        background: #334155;
+        font-size: 20px;
+        padding: 6px 10px;
+    }
+}
+
     </style>
 </head>
 <body>
