--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     .app { grid-template-columns: 1fr; }
 
     .sidebar {
-        position: absolute;
+        position: sticky;
         width: 100%;
         height: 100%;
         z-index: 20;
@@ -298,6 +298,7 @@
     .sidebar.active {
         display: flex;
         transform: translateX(0);
+        position: sticky;
     }
 
     .chat {
@@ -310,6 +311,7 @@
         background: #334155;
         font-size: 20px;
         padding: 6px 10px;
+        position: sticky;
     }
 }
 
@@ -564,3 +566,4 @@
 </script>
 </body>
 </html>
+
